--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon --inspect dist/index.js",
-    "watch": "tsc -w"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.1",
+    "watch": "tsc -w",
     "build": "tsc",
     "start": "node dist/index.js"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
